package com.example.cardihealt.Medico.Informes_Medico;

public class InformesUsuario {
    String key="";
    String email="";
    String actividadFisica="";
    String antecedentes="";
    String apellido="";
    String contextura="";
    String edad="";
    String fecha="";
    String genero="";
    String indiceMasaCorporal="";
    String indiceTabaquico="";
    String nombre="";
    String perimetroAbdominal="";
    String puntajePrueba="";
    String riesgo="";
    String riesgoEpoc="";
    String riesgoEstimado="";
    String riesgoGenetico="";
    String riesgoPerimetroAbd="";
    String riesgoEdad="";

    public InformesUsuario(String key,String  email,String actividadFisica, String antecedentes, String apellido, String contextura,
                           String edad, String fecha, String genero, String indiceMasaCorporal, String indiceTabaquico,
                           String nombre, String perimetroAbdominal, String riesgo,String riesgoEpoc,String riesgoEstimado,
                           String riesgoGenetico, String riesgoPerimetroAbd,String riesgoEdad) {

        this.key=key;
        this.email = email;
        this.actividadFisica = actividadFisica;
        this.antecedentes = antecedentes;
        this.apellido = apellido;
        this.contextura = contextura;
        this.edad = edad;
        this.fecha = fecha;
        this.genero = genero;
        this.indiceMasaCorporal = indiceMasaCorporal;
        this.indiceTabaquico = indiceTabaquico;
        this.nombre = nombre;
        this.perimetroAbdominal = perimetroAbdominal;
        this.puntajePrueba = puntajePrueba;
        this.riesgo = riesgo;
        this.riesgoEpoc = riesgoEpoc;
        this.riesgoEstimado = riesgoEstimado;
        this.riesgoGenetico = riesgoGenetico;
        this.riesgoPerimetroAbd = riesgoPerimetroAbd;
        this.riesgoEdad = riesgoEdad;
    }

    public String getKey() {
        return key;
    }

    public void setKey(String key) {
        this.key = key;
    }

    public String getEmail() {
        return email;
    }

    public void setEmail(String email) {
        this.email = email;
    }

    public String getActividadFisica() {
        return actividadFisica;
    }

    public void setActividadFisica(String actividadFisica) {
        this.actividadFisica = actividadFisica;
    }

    public String getAntecedentes() {
        return antecedentes;
    }

    public void setAntecedentes(String antecedentes) {
        this.antecedentes = antecedentes;
    }

    public String getApellido() {
        return apellido;
    }

    public void setApellido(String apellido) {
        this.apellido = apellido;
    }

    public String getContextura() {
        return contextura;
    }

    public void setContextura(String contextura) {
        this.contextura = contextura;
    }

    public String getEdad() {
        return edad;
    }

    public void setEdad(String edad) {
        this.edad = edad;
    }

    public String getFecha() {
        return fecha;
    }

    public void setFecha(String fecha) {
        this.fecha = fecha;
    }

    public String getGenero() {
        return genero;
    }

    public void setGenero(String genero) {
        this.genero = genero;
    }

    public String getIndiceMasaCorporal() {
        return indiceMasaCorporal;
    }

    public void setIndiceMasaCorporal(String indiceMasaCorporal) {
        this.indiceMasaCorporal = indiceMasaCorporal;
    }

    public String getIndiceTabaquico() {
        return indiceTabaquico;
    }

    public void setIndiceTabaquico(String indiceTabaquico) {
        this.indiceTabaquico = indiceTabaquico;
    }

    public String getNombre() {
        return nombre;
    }

    public void setNombre(String nombre) {
        this.nombre = nombre;
    }

    public String getPerimetroAbdominal() {
        return perimetroAbdominal;
    }

    public void setPerimetroAbdominal(String perimetroAbdominal) {
        this.perimetroAbdominal = perimetroAbdominal;
    }

    public String getPuntajePrueba() {
        return puntajePrueba;
    }

    public void setPuntajePrueba(String puntajePrueba) {
        this.puntajePrueba = puntajePrueba;
    }

    public String getRiesgo() {
        return riesgo;
    }

    public void setRiesgo(String riesgo) {
        this.riesgo = riesgo;
    }

    public String getRiesgoEpoc() {
        return riesgoEpoc;
    }

    public void setRiesgoEpoc(String riesgoEpoc) {
        this.riesgoEpoc = riesgoEpoc;
    }

    public String getRiesgoEstimado() {
        return riesgoEstimado;
    }

    public void setRiesgoEstimado(String riesgoEstimado) {
        this.riesgoEstimado = riesgoEstimado;
    }

    public String getRiesgoGenetico() {
        return riesgoGenetico;
    }

    public void setRiesgoGenetico(String riesgoGenetico) {
        this.riesgoGenetico = riesgoGenetico;
    }

    public String getRiesgoPerimetroAbd() {
        return riesgoPerimetroAbd;
    }

    public void setRiesgoPerimetroAbd(String riesgoPerimetroAbd) {
        this.riesgoPerimetroAbd = riesgoPerimetroAbd;
    }

    public String getRiesgoEdad() {
        return riesgoEdad;
    }

    public void setRiesgoEdad(String riesgoEdad) {
        this.riesgoEdad = riesgoEdad;
    }
}
